5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4076/executions/1602_1446.log
== SUBMITION (2019-03-20 18:43:54) 
-- CODE:
valor=float(input("a quantidade de poupas compradas")
o_cara= valor/3
print(round(o_cara,3)
-- EXECUTION TIME:
0.231271
-- ERROR:
  File "/home/codebench/codes/1602/1446/main.py", line 2
    o_cara= valor/3
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:44:10) 
-- CODE:
valor=float(input("a quantidade de poupas compradas")
o_cara= valor/3
print(round(o_cara,3)
-- ERROR:
File "XXXX", line 2
    o_cara= valor/3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:44:32) 
-- CODE:
valor=float(input("a quantidade de poupas compradas")
ocara= valor/3
print(round(ocara,3)
-- ERROR:
File "XXXX", line 2
    ocara= valor/3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:44:43) 
-- CODE:
valor=float(input("a quantidade de poupas compradas")
ocara=valor/3
print(round(ocara,3)
-- ERROR:
File "XXXX", line 2
    ocara=valor/3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:44:57) 
-- CODE:
valor=float(input("a quantidade de poupas compradas")
ocara=valor/3
print(round(ocara,3))
-- ERROR:
File "XXXX", line 2
    ocara=valor/3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:45:12) 
-- CODE:
valor=float(input("a quantidade de poupas compradas"))
ocara=valor/3
print(round(ocara,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:45:17) 
-- CODE:
valor=float(input("a quantidade de poupas compradas"))
ocara=valor/3
print(round(ocara,3))
-- EXECUTION TIME:
0.185701
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
